# swagger.yaml
@@ -44,15 +44,20 @@ paths:
         - Url
       summary: long url for shorting
       security: []
-      operationId: putLongUrl
-      responses:
-        302:
-          description: OK
+      operationId: putLong
+      parameters:
+        - name: data
+          in: body
           schema:
             type: object
-            properties:
-              shortUrl:
+            properties: 
+              longUrl:
                 type: string
+      responses:
+        200:
+          description: OK
+          schema:
+            type: string
         503:
           description: Returned if the service is detected as unhealthy
           schema:
@@ -66,7 +71,7 @@ paths:
         - Url
       summary: return long url
       security: []
-      operationId: getLongUrl
+      operationId: getLong
       responses:
         301:
           description: OK
